# sandbox

./: .editorconfig  .gitattributes  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .yamllint.yaml  AGENTS.md  LICENSE  Makefile  README.md
.githooks/: prepare-commit-msg
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/scripts/: attribution-guard.sh
.github/workflows/: attribution-guard.yml  auto-merge.yml  ci.yml  security.yml  strip-ai-attribution.yml
.pre-commit-hooks/: strip-ide-trailers.sh
projects/: README.md
projects/_example-go-api/: Makefile  README.md  go.mod
projects/_example-go-api/cmd/server/: main.go
projects/_example-go-api/docs/: DESIGN.md
projects/_example-go-api/internal/config/: config.go
projects/_example-go-api/internal/handlers/: health.go  item.go
projects/_example-go-api/internal/middleware/: logging.go
projects/_example-go-api/internal/models/: item.go
projects/_example-go-api/internal/service/: item_service.go
projects/_example-go-api/tests/: integration_test.go
projects/_example-python-cli/: README.md  pyproject.toml
projects/_example-python-cli/docs/: DESIGN.md
projects/_example-python-cli/src/example_cli/: __init__.py  __main__.py  cli.py  config.py  core.py  utils.py
projects/_example-python-cli/tests/: __init__.py  conftest.py  test_core.py
projects/hedgedoc/: .env.example  .gitignore  Caddyfile  Makefile  README.md  docker-compose.yml
projects/hedgedoc/config/: default.md
projects/hedgedoc/scripts/: backup.sh  hedgedoc-cli.py  restore.sh  setup.sh
projects/job-aggregator/: .env.example  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
projects/job-aggregator/alembic/: env.py
projects/job-aggregator/docs/: DESIGN.md
projects/job-aggregator/src/job_aggregator/: __init__.py  __main__.py
projects/job-aggregator/src/job_aggregator/api/: app.py  deps.py
projects/job-aggregator/src/job_aggregator/api/routes/: health.py  jobs.py
projects/job-aggregator/src/job_aggregator/core/: config.py  models.py
projects/job-aggregator/src/job_aggregator/db/: engine.py  redis.py  tables.py
projects/job-aggregator/tests/: conftest.py  test_api.py  test_config.py  test_models.py
projects/random-username-generator/: README.md  pyproject.toml
projects/random-username-generator/src/username_generator/: __init__.py  __main__.py  cli.py  config.py  core.py  wordlists.py
projects/random-username-generator/tests/: test_core.py
