# =============================================================================
# pyproject.toml — Project Metadata, Dependencies, and Tool Config
# =============================================================================
# Single source of truth for the random-username-generator project.
#
# Install:      pip install -e ".[dev]"
# Run:          username-gen --help  OR  python -m username_generator
# Test:         pytest
# =============================================================================

[build-system]
requires = ["setuptools>=68.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "random-username-generator"
version = "0.1.0"
description = "Generate fun, random usernames like Reddit does — AdjectiveNounNumber style"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

# Runtime dependencies
dependencies = [
    "click>=8.1",          # CLI framework
    "rich>=13.0",          # Pretty terminal output
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.8",
]

# CLI entry point: `username-gen` command after pip install
[project.scripts]
username-gen = "username_generator.cli:main"

# --- Tool Config ---

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true

[tool.setuptools.packages.find]
where = ["src"]
